# sysrepo-library-robot-framework

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile
docs/source/: SysrepoLibrary.rst  conf.py  index.rst  modules.rst
examples/: __init__.robot  connect.robot
src/: .gitignore
src/SysrepoLibrary/: SysrepoLibrary.py  __init__.py
