[project]
name = 	"robotframework-sysrepolibrary"
version = "0.3.1"
description = "A testing library for Robot Framework that utilizes the Sysrepo tool internally"
readme = { file = "README.md", content-type = "text/markdown" }

requires-python = ">=3.6.0"

license = { file = "LICENSE" }

keywords = ["sysrepo", "robot", "robotframework", "networking", "linux", "testing"]
authors = [
    { name = "Juraj Vijtiuk", email = "juraj.vijtiuk@sartura.hr" },
    { name = "Andrej Gardijan", email = "andrej.gardijan@sartura.hr" }
]
maintainers = [
    { name = "Juraj Vijtiuk", email = "juraj.vijtiuk@sartura.hr" },
    { name = "Andrej Gardijan", email = "andrej.gardijan@sartura.hr" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking"
]

dependencies = [
    "robotframework",
    "sysrepo",
    "xmltodict"
]


[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-parser",
]

tests = [
    "tox"
]


[project.urls] 
"Homepage" = "https://github.com/telekom/sysrepo-library-robot-framework"
"Bug Reports" = "https://github.com/telekom/sysrepo-library-robot-framework/issues"
"Source" = "https://github.com/telekom/sysrepo-library-robot-framework"


[build-system]
requires      = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"
