[metadata]
name = 	SysrepoLibrary
version = 0.1.0
author = Juraj Vijtiuk, Andrej Gardijan
author_email = juraj.vijtiuk@sartura.hr, andrej.gardijan@sartura.hr
url = https://lab.sartura.hr/dt/robotframework-sysrepolibrary
description = A testing library for Robot Framework that utilizes the Sysrepo tool internally
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sysrepo, integration tests, robotframework, system, networking
license = None
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    	   =src
where = src
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.6.0
install_requires =
	robotframework
	sysrepo

[options.package_data]
* = README.md
